<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_while_sleeping"
    tools:context=".ui.home.HomeWhileSleepingActivity">


    <EditText
        android:id="@+id/notiz"
        android:layout_width="199dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="314dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="0"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSaveNotiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/notiz"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="41dp"
        android:layout_toEndOf="@+id/notiz"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tfLableIdc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/notiz"
        android:layout_alignStart="@+id/notiz"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_notes_while_sleeping"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignStart="@+id/notiz"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginTop="145dp"
        android:textColor="@color/white"
        android:layout_marginBottom="-13dp"
        android:text="@string/notes" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="272dp"
        android:layout_height="79dp"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginStart="5dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="-13dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/dot"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tfNotesWhileSleepingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignStart="@+id/notiz"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginTop="234dp"
        android:textColor="@color/white"
        android:layout_marginBottom="-13dp"
        android:text="@string/wake_up_time_label" />

    <TextView
        android:id="@+id/tfNoiseCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignStart="@+id/notiz"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginTop="274dp"
        android:textColor="@color/white"
        android:layout_marginBottom="-13dp"
        android:text="@string/noise_count_label" />


    <TextView
        android:id="@+id/textViewWakeUpTime"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginStart="14dp"
        android:layout_marginTop="234dp"
        android:layout_marginBottom="-13dp"
        android:layout_toEndOf="@+id/tfNotesWhileSleepingLabel"
        android:text="@string/dot"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewNoiseCount"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/notiz"
        android:layout_marginStart="14dp"
        android:layout_marginTop="272dp"
        android:layout_marginBottom="-13dp"
        android:layout_toEndOf="@+id/tfNoiseCountLabel"
        android:text="@string/dot"
        android:textColor="@color/white" />

</RelativeLayout>